--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
 async function getRealTimeGoldPrice() {
   try {
     // ********** 只需要改这里 **********
-    const APPKEY = "你的极速数据appkey"; // 替换成你注册的appkey
+    const APPKEY = "d9d7abf29c170a00"; // 替换成你注册的appkey
     // *********************************
     
     // 调用极速数据接口（支持跨域，GitHub部署可用）
